--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,20 @@
-[tool.poetry]
+[project]
 name = "reddit-easy-post"
 version = "0.1.0"
 description = "Easy to use YAML to Reddit posting via API"
-authors = ["Jean-Luc Thumm <jeanlucthumm@gmail.com>"]
+authors = [
+    {name = "Jean-Luc Thumm", email = "jeanlucthumm@gmail.com"}
+]
 readme = "README.md"
+requires-python = ">=3.12"
+dependencies = [
+    "praw>=7.8.1",
+    "pyyaml>=6.0.2",
+]
 
-[tool.poetry.dependencies]
-python = "^3.12"
-praw = "^7.8.1"
-pyyaml = "^6.0.2"
-
+[project.scripts]
+main = "reddit_easy_post.main:main"
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.poetry.scripts]
-main = "reddit_easy_post.main:main"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
